Update .gitignore to include local automation files
Added local automation files and other custom additions to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# --- Local automation files (custom additions) ---
+MyCreds.env
+springahead_current_week.json
+INVOICE (Template).xls
+*.pdf
+__pycache__/
+
